# FlightsScanner

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep
backend/app/: __init__.py  main.py  prestart.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: alerts.py  auth.py  health.py
backend/app/core/: __init__.py  config.py  database.py  errors.py  security.py
backend/app/models/: __init__.py  base.py  flight_alert.py  flight_result.py  user.py
backend/app/schemas/: __init__.py  alert.py  result.py
backend/app/services/: __init__.py  alert_service.py  cache.py  dispatch.py  user_service.py
backend/app/services/provider/: __init__.py  amadeus.py  base.py  mock.py
backend/app/utils/: __init__.py  date_logic.py
backend/app/workers/: __init__.py  celery_app.py  dev_enqueue.py  tasks.py
backend/tests/: __init__.py  conftest.py  test_amadeus.py  test_api.py  test_date_logic.py  test_provider.py  test_tasks.py
docs/: api-spec.md  architecture.md  auth-and-security.md  caching-strategy.md  database-schema.md  design.md  development.md  fuzzy-dates.md
frontend/: .dockerignore  Dockerfile  next-env.d.ts  next.config.mjs  package-lock.json  package.json
frontend/public/: .gitkeep
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AlertForm.tsx  ResultsList.tsx  SignIn.tsx
frontend/src/lib/: api.ts  (+1 more)
(+3 files in other folders)
